added a list and picture

--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,19 @@
+<!--tells the browser that this code is written in HTML5-->
 <!DOCTYPE html>
+
+<!--start of HTML content-->
 <html>
+  <!--name of the website-->
   <head>
     <title>My Webpage!</title>
   </head>
   <body>
-    Hello, world! Hello, again!
+    <h1>Please take these items with you:</h1>
+    <ul>
+      <li>Tandenborstel</li>
+      <li>Tandpasta</li>
+      <li>Oorbel</li>
+      <img src="cat.jpg" height="200" width="300">
+    </ul>
   </body>
 </html>
