--- a/hello.html
+++ b/hello.html
@@ -10,10 +10,37 @@
   <body>
     <h1>Please take these items with you:</h1>
     <ul>
-      <li>Tandenborstel</li>
-      <li>Tandpasta</li>
-      <li>Oorbel</li>
-      <img src="cat.jpg" height="200" width="300">
+      <li>Toothbrush</li>
+      <li>Toothpaste</li>
+      <li>Earring</li>
     </ul>
+    <img src="toothbrush.jpg" width="50%">
+    <table>
+        <tr>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Where to buy?</th>
+        </tr>
+        <tr>
+          <td>Toothbrush</td>
+          <td>1</td>
+          <td>Supermarket</td>
+        </tr>
+        <tr>
+          <td>Toothpaste</td>
+          <td>0,50</td>
+          <td>Supermarket</td>
+        </tr>
+        <tr>
+          <td>Earring</td>
+          <td>10</td>
+          <td>Jewelry store</td>
+        </tr>
+    </table>
+    <form>
+        <input type="text" placeholder="Most inmportant item" name="item">
+        <button>Submit!</button>
+    </form>
+    Dit was het voor nu!
   </body>
 </html>
