--- a/hello.html
+++ b/hello.html
@@ -38,9 +38,8 @@
         </tr>
     </table>
     <form>
-        <input type="text" placeholder="Most inmportant item" name="item">
+        <input type="text" placeholder="Most important item" name="item">
         <button>Submit!</button>
     </form>
-    Dit was het voor nu!
   </body>
 </html>
