--- a/hello.html
+++ b/hello.html
@@ -13,6 +13,7 @@
       <li>Toothbrush</li>
       <li>Toothpaste</li>
       <li>Earring</li>
+      <li>Shaver</li>
     </ul>
     <img src="toothbrush.jpg" width="50%">
     <table>
